# useless_bot

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql-analysis.yml
data/: init.sql
scripts/: create_db.py  run.sh  run_docker.sh
useless_bot/: __init__.py  __main__.py  bot.py  config.py  utils.py
useless_bot/arcade/: arcade.py
useless_bot/arcade/blackjack/: blackjack.py  objects.py
useless_bot/cogs/: bank.py  doujin.py  music.py  reddit.py  roles.py  settings.py  system.py
useless_bot/cogs/activity/: activity.py
useless_bot/cogs/arcade/: __init__.py  arcade.py
useless_bot/cogs/arcade/blackjack/: __init__.py  blackjack.py  objects.py
useless_bot/cogs/bank/: __init__.py  bank.py
useless_bot/cogs/doujin/: __init__.py  doujin.py
useless_bot/cogs/general/: general.py  views.py
useless_bot/cogs/music/: errors.py  models.py  music.py  voice.py  yt.py
useless_bot/cogs/reddit/: reddit.py
useless_bot/cogs/roles/: __init__.py  roles.py
useless_bot/cogs/settings/: settings.py
useless_bot/cogs/system/: system.py
useless_bot/core/: bank_core.py  config.py  errors.py  queue.py  reddit_api.py  ytdl_options.py
useless_bot/core/drivers/: __init__.py  base.py  json.py  shelve.py
useless_bot/core/ytdl/: __init__.py  models.py  options.py  queue.py  ytdl.py
useless_bot/image/: interface.py  meme.py  reddit.py  sauce.py
useless_bot/management/: management.py  settings.py
useless_bot/money/: bank.py  errors.py  interface.py  objects.py
useless_bot/roles/: roles.py
