[tool.poetry]
name = "useless_bot"
version = "3.3"
description = "self-hosted discord bot"
license = "MIT"
authors = ["MRvillager <mrvillager.dev@gmail.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: aiohttp",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Chat",
]

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "pi"
url = "https://www.piwheels.org/simple/"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
aiorwlock = "^1.2"
aiohttp = { version = "^3", extras = ["speedups"] }
uvloop = { version = "^0.16", markers = "sys_platform == 'linux'" }
nextcord = { version = "~2*", allow-prereleases = true}
orjson = { version = "^3", markers = "platform_machine != 'armv7l'" }
aiofiles = { version = "^0.8", optional = true }
useless-lavalink = "^1.3.7.2"

[tool.poetry.extras]
json = ["orjson", "aiofiles"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
